// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base64String (integration) should be able to shrink 0123AB== 1`] = `
"\\"0123AB==\\"
├> \\"\\"
├> \\"3AB=\\"
|  ├> \\"AB==\\"
|  |  ├> \\"\\"
|  |  |  ├> \\"\\"
|  |  |  └> \\"\\"
|  |  |     └> \\"\\"
|  |  ├> \\"\\"
|  |  |  └> \\"\\"
|  |  └> \\"AA==\\"
|  |     ├> \\"\\"
|  |     |  └> \\"\\"
|  |     └> \\"\\"
|  |        └> \\"\\"
|  ├> \\"AAB=\\"
|  |  ├> \\"AB==\\"
|  |  |  ├> \\"\\"
|  |  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  |     └> \\"\\"
|  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  └> \\"AA==\\"
|  |  |     ├> \\"\\"
|  |  |     |  └> \\"\\"
|  |  |     └> \\"\\"
|  |  |        └> \\"\\"
|  |  ├> \\"\\"
|  |  |  └> \\"\\"
|  |  ├> \\"AB==\\"
|  |  |  ├> \\"\\"
|  |  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  |     └> \\"\\"
|  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  └> \\"AA==\\"
|  |  |     ├> \\"\\"
|  |  |     |  └> \\"\\"
|  |  |     └> \\"\\"
|  |  |        └> \\"\\"
|  |  ├> \\"AA==\\"
|  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  └> \\"\\"
|  |  |     └> \\"\\"
|  |  └> \\"AAA=\\"
|  |     ├> \\"AA==\\"
|  |     |  ├> \\"\\"
|  |     |  |  └> \\"\\"
|  |     |  └> \\"\\"
|  |     |     └> \\"\\"
|  |     ├> \\"\\"
|  |     |  └> \\"\\"
|  |     ├> \\"AA==\\"
|  |     |  ├> \\"\\"
|  |     |  |  └> \\"\\"
|  |     |  └> \\"\\"
|  |     |     └> \\"\\"
|  |     └> \\"AA==\\"
|  |        ├> \\"\\"
|  |        |  └> \\"\\"
|  |        └> \\"\\"
|  |           └> \\"\\"
|  ├> \\"cAB=\\"
|  |  ├> \\"AB==\\"
|  |  |  ├> \\"\\"
|  |  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  |     └> \\"\\"
|  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  └> \\"AA==\\"
|  |  |     ├> \\"\\"
|  |  |     |  └> \\"\\"
|  |  |     └> \\"\\"
|  |  |        └> \\"\\"
|  |  ├> \\"OAB=\\"
|  |  |  ├> \\"AB==\\"
|  |  |  |  ├> \\"\\"
|  |  |  |  |  ├> \\"\\"
|  |  |  |  |  └> \\"\\"
|  |  |  |  |     └> \\"\\"
|  |  |  |  ├> \\"\\"
|  |  |  |  |  └> \\"\\"
|  |  |  |  └> \\"AA==\\"
|  |  |  |     ├> \\"\\"
|  |  |  |     |  └> \\"\\"
|  |  |  |     └> \\"\\"
|  |  |  |        └> \\"\\"
|  |  |  ├> \\"HAB=\\"
|  |  |  |  ├> \\"AB==\\"
|  |  |  |  |  ├> \\"\\"
|  |  |  |  |  |  ├> \\"\\"
|  |  |  |  |  |  └> \\"\\"
|  |  |  |  |  |     └> \\"\\"
|  |  |  |  |  ├> \\"\\"
|  |  |  |  |  |  └> \\"\\"
|  |  |  |  |  └> \\"AA==\\"
|  |  |  |  |     └> …
|  |  |  |  └> …
|  |  |  └> …
|  |  └> …
|  └> …
└> …"
`;

exports[`base64String (integration) should be able to shrink ABCD 1`] = `
"\\"ABCD\\"
├> \\"\\"
├> \\"CD==\\"
|  ├> \\"\\"
|  |  ├> \\"\\"
|  |  ├> \\"\\"
|  |  |  └> \\"\\"
|  |  └> \\"\\"
|  |     ├> \\"\\"
|  |     └> \\"\\"
|  |        ├> \\"\\"
|  |        └> \\"\\"
|  |           └> \\"\\"
|  ├> \\"AD==\\"
|  |  ├> \\"\\"
|  |  |  ├> \\"\\"
|  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  └> \\"\\"
|  |  |     ├> \\"\\"
|  |  |     └> \\"\\"
|  |  |        ├> \\"\\"
|  |  |        └> \\"\\"
|  |  |           └> \\"\\"
|  |  ├> \\"\\"
|  |  |  └> \\"\\"
|  |  ├> \\"AA==\\"
|  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  └> \\"\\"
|  |  |     └> \\"\\"
|  |  └> \\"AC==\\"
|  |     ├> \\"\\"
|  |     |  ├> \\"\\"
|  |     |  └> \\"\\"
|  |     |     ├> \\"\\"
|  |     |     └> \\"\\"
|  |     |        └> \\"\\"
|  |     ├> \\"\\"
|  |     |  └> \\"\\"
|  |     └> \\"AB==\\"
|  |        ├> \\"\\"
|  |        |  ├> \\"\\"
|  |        |  └> \\"\\"
|  |        |     └> \\"\\"
|  |        ├> \\"\\"
|  |        |  └> \\"\\"
|  |        └> \\"AA==\\"
|  |           ├> \\"\\"
|  |           |  └> \\"\\"
|  |           └> \\"\\"
|  |              └> \\"\\"
|  ├> \\"BD==\\"
|  |  ├> \\"\\"
|  |  |  ├> \\"\\"
|  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  └> \\"\\"
|  |  |     ├> \\"\\"
|  |  |     └> \\"\\"
|  |  |        ├> \\"\\"
|  |  |        └> \\"\\"
|  |  |           └> \\"\\"
|  |  ├> \\"AD==\\"
|  |  |  ├> \\"\\"
|  |  |  |  ├> \\"\\"
|  |  |  |  ├> \\"\\"
|  |  |  |  |  └> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  |     ├> \\"\\"
|  |  |  |     └> \\"\\"
|  |  |  |        ├> \\"\\"
|  |  |  |        └> \\"\\"
|  |  |  |           └> \\"\\"
|  |  |  ├> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  ├> \\"AA==\\"
|  |  |  |  ├> \\"\\"
|  |  |  |  |  └> \\"\\"
|  |  |  |  └> \\"\\"
|  |  |  |     └> \\"\\"
|  |  |  └> \\"AC==\\"
|  |  |     ├> \\"\\"
|  |  |     |  ├> \\"\\"
|  |  |     |  └> \\"\\"
|  |  |     |     ├> \\"\\"
|  |  |     |     └> \\"\\"
|  |  |     |        └> \\"\\"
|  |  |     ├> \\"\\"
|  |  |     |  └> \\"\\"
|  |  |     └> \\"AB==\\"
|  |  |        ├> \\"\\"
|  |  |        |  ├> \\"\\"
|  |  |        |  └> \\"\\"
|  |  |        |     └> \\"\\"
|  |  |        ├> \\"\\"
|  |  |        |  └> \\"\\"
|  |  |        └> \\"AA==\\"
|  |  |           ├> \\"\\"
|  |  |           |  └> \\"\\"
|  |  |           └> …
|  |  └> …
|  └> …
└> …"
`;
